# CMOR-438

./: LICENSE  README.md  Supervised_Learning  pyproject.toml  requirements.txt
Supervised_Learning/logistic_regression/: README.md  logistic_regression.ipynb
notebooks/supervised_learning/: KNN.ipynb
notebooks/supervised_learning/Decision_Trees/: Decision_Trees.ipynb  README.md
notebooks/supervised_learning/Ensemble_Methods/: Ensemble_Methods.ipynb  README.md
notebooks/supervised_learning/KNN/: README.md
notebooks/supervised_learning/Linear_Regression/: Linear_Regression.ipynb  README.md
notebooks/supervised_learning/Logistic_Regression/: Logistic_Regression.ipynb  README.md
notebooks/supervised_learning/Multilayer_Perceptron/: Multilayer_perceptron.ipynb  README.md
notebooks/supervised_learning/Perceptron/: README.md  perceptron.ipynb
notebooks/supervised_learning/Regression_Trees/: README.md  regression_trees.ipynb
notebooks/unsupervised_learning/DBSCAN/: DBSCAN.ipynb  README.md
notebooks/unsupervised_learning/K-Means/: README.md  k_means_clustering.ipynb
notebooks/unsupervised_learning/PCA/: README.md  pca.ipynb
notebooks/unsupervised_learning/community_detection/: README.md  community_detection.ipynb
notebooks/unsupervised_learning/svd/: README.md  svd.ipynb
src/: README.md  logistic_regression.py
src/rice_ml/: __init__.py
src/rice_ml/processing/: __init__.py  post_processing.py  pre_processing.py
tests/unit/: test_decision_trees.py  test_knn.py  test_post_processing.py  test_preprocessing.py
(+15 files in other folders)
